--- a/static/project_files/style.css
+++ b/static/project_files/style.css
@@ -1,53 +1,91 @@
-/*breadcrumb*/
-nav{
+html {
+    position: relative;
+    min-height: 100%;
+  }
+  
+  body{
+    margin-bottom: 60px;
+  }
+  
+  /*breadcrumb*/
+  nav{
     position: fixed;
     top: 0;
     width: 100%;
-}
-.breadcrumb{
-    background-color: #515161;
-    border-radius: 0;
-}
-
-a, a:hover{
-    color: #AEBD38;
-}
-
-/*table*/
-
-table{
-    color: #68829E;
+  
+  }
+  .breadcrumb{
+    background: linear-gradient(#F8F594, #D5D533);
+     
+  }
+  .breadcrumb .breadcrumb-item,.breadcrumb a{
+  text-decoration: none;
+    text-transform: uppercase;
+    font-size: 17px;
+    text-decoration: none;
+    -ms-transition: font-size 0.3s ease;
+    transition: font-size 0.3s ease;
+  }
+  .breadcrumb li:hover, .breadcrumb.a:hover{
+    font-size: 20px;
+    font-weight: bold;
+    color: #B314DB;
+  }
+  
+  /*table */
+  
+  .table{
+    color:#5d12e7;
     margin: 100px 10px;
-}
-
-thead{
-    background-color: #68829E;
+  }
+  thead{
+    background: linear-gradient(#B314DB, #5d12e7);
+    background: -webkit-linear-gradient(#B314DB, #5d12e7);
+    background: -o-linear-gradient(#B314DB, #5d12e7);
+    background: -moz-linear-gradient(#B314DB, #5d12e7);
     color: white;
-    cursor: pointer;
-}
-
-tbody ion-icon{
+  cursor: pointer;
+  
+  }
+  
+  /*icons*/
+  ion-icon{
     font-size: 24px;
-    color: #68829E;
-}
-
-tbody{
+    color:#5d12e7;
+    margin-right: 5px;
+    padding-top: 3px;
+  
+  }
+  .fname{
+    cursor: pointer;
+  }
+  
+  tbody{
     display: block;
     height: 300px;
     overflow-y: scroll;
-}
-thead, tbody tr{
+    text-decoration: none;
+  }
+  tbody a{
+    text-decoration: none;
+  
+  
+  }
+  thead, tbody tr{
     display: table;
     table-layout: fixed;
     width: 100%;
-}
-
-/*footer*/
-.footer {
+  }
+  footer{
     position: absolute;
     bottom: 0;
-    width: 100%;
     height: 60px;
-    line-height: 60px;
-    background-color: #515161;
-}
+    background: linear-gradient(#F6F390, #D5D533);
+    background: -webkit-linear-gradient(#F6F390, #D5D533);
+    background: -o-linear-gradient(#F6F390, #D5D533);
+    background: -moz-linear-gradient(#F6F390, #D5D533);
+    padding: 10px 30px;
+    margin-top: auto;
+    width: 100%;
+  
+  }
